* Fixed incorrect line address in tag file for SQL tags [SQL, Bug #823000].
* Fixed incorrect recognition of POD paragraph [Perl, Bug #842077].
* Fixed spurious tags for for C++ member templtates [C++, Bug #849591].
* Fixed spurious local tags for statements following labels [C].
* Fixed missing tags for certain scoped functions [Vim].

ctags-5.5.2 (Wed Sep 17 2003)
* Added tags for local variables for C-based languages [C/C++/C#/Java/Vera,
  Feature Request #449503].
* Fixed compilation problem due to type change made to accomodate change of
  return type of _findfirst() in VisualStudio.Net [Win32, Bug #775789].
* Fixed problems with certain bit fields.

ctags-5.5.1 (Wed Jul 30 2003)
* Changed supported tag kinds for Verilog parser during overhaul.
* Restored exit of program after --help, --license, and --version options [Bug
  #717311, #751240].
* Removed inclusion of general.h (GPL) from readtags.c (public domain).
* Added support for tags for labels [PL/SQL].
* Added support for tags for constant definitions [PHP].
* Fixed redundant parsing of configuration file [Windows, Bug #768814].
* Fixed missing tags for definitions spanning lines [Verilog, Bug #762027].
* Fixed compilation error for uncommon hosts.
* Fixed missing tags for Korn shell specific function definitions. [Sh,
  Bug #769184]
* Fixed missing tags when semicolon separator appears [Fortran, Bug #734933].
* Fixed missing tags when endsubroutine keyword appears [Fortran, Bug #726712].
* Fixed problem with fixed-form line continuation following comment [Fortran,
  Bug #726875].
* Fixed missing tags for nested blocks [PL/SQL, Bug #722501].
* Fixed missing tags for function typedefs [C].
* Fixed inability to map empty extension when path contained dot [Bug #742689].

ctags-5.5 (Tue Apr 1 2003)
* Changed kind indicator for methods from 'f' to 'm' [Tcl].
* Changed tags within interfaces to be disabled by default (like prototypes in
  C/C++) [Fortran].